# Radar

./: README.md  Readem.md  simplescreenrecorder-2022-12-05_19.58.53.mkv  trans.cpp
devel/: .catkin  .rosinstall  setup.sh
devel/include/beginner_tutorials/: Num.h
devel/lib/beginner_tutorials/: listener  listener2  talker  trans
devel/lib/pkgconfig/: beginner_tutorials.pc
devel/lib/python3/dist-packages/beginner_tutorials/msg/: _Num.py
devel/share/beginner_tutorials/cmake/: beginner_tutorials-msg-extras.cmake  beginner_tutorials-msg-paths.cmake  beginner_tutorialsConfig.cmake
devel/share/common-lisp/ros/beginner_tutorials/msg/: Num.lisp
devel/share/gennodejs/ros/beginner_tutorials/msg/: Num.js
devel/share/roseus/ros/beginner_tutorials/: manifest.l
devel/share/roseus/ros/beginner_tutorials/msg/: Num.l
realsense_d435i/: realsense_stereo_imu_config.yaml  right.yaml
src/beginner_tutorials/: CMakeLists.txt  package.xml  rviz_config.rviz
src/beginner_tutorials/src/: ekf_radar.py  trans.cpp
